<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_item"
        android:title="@string/main"
        android:icon="@drawable/ic_search_bottom" />

    <item
        android:id="@+id/my_list_menu_item"
        android:title="@string/my_list"
        android:icon="@drawable/ic_list" />

    <item
        android:id="@+id/shops_menu_item"
        android:title="@string/shops"
        android:icon="@drawable/ic_shop" />

    <item
        android:id="@+id/profile_menu_item"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />

    <item
        android:id="@+id/cart_menu_item"
        android:title="@string/cart"
        android:icon="@drawable/ic_cart" />

</menu>